--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>MicroStars</title>
+  <title>Stars Between</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="assets/images/tiles/space.png">
